--- a/src/Layout.css
+++ b/src/Layout.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     /* auto cannot go at the end but has to go in between to fr units*/
-    /* grid-template-columns: [col1] 1fr [col2] auto [col3] 1fr [endcol]; */
+    /* grid-template-columns: [col1] 1fr [col2] auto [endCol] 1fr */
     grid-template-columns: 1fr auto 1fr;
   }
 }
@@ -12,17 +12,17 @@
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template-rows: [frow] 25% [row2] auto [row3] 25%[lrow];
-  grid-template-columns: [col1] 1fr [col2] auto [col3] 1fr[endcol];
+  grid-template-rows: [frow] 25% [row2] auto [lrow] 25%;
+  grid-template-columns: [col1] 1fr [col2] auto [endCol] 1fr;
 }
 
 .navcontainer {
   display: flex;
-  border: solid salmon;
+  /* border: solid salmon; */
   grid-row-start: lrow;
   grid-row-end: lrow;
-  grid-column-start: col1;
-  grid-column-end: endcol;
+  grid-column-start: col2;
+  grid-column-end: endCol;
   align-self: center; /* vertically */
   justify-content: center; /* Center horizontally */
   align-items: center; /*line height looks like */
