--- a/src/Scan.css
+++ b/src/Scan.css
@@ -1,15 +1,9 @@
 .imagePreviewParentContainer {
   /* border: solid 1px navy; */
   grid-column-start: col2;
-  grid-column-end: col3;
+  grid-column-end: endCol;
   grid-row-start: row2;
   grid-row-end: lrow;
-}
-
-.imagePreviewContainer {
-  /* border: solid 1px green; */
-  grid-column-start: col2;
-  grid-column-end: col3;
-  grid-row-start: row2;
-  grid-row-end: lrow;
+  height: 100%;
+  width: 100%;
 }
